<resources>
    <string name="app_name">CountryList</string>
    <string name="title_home">Home</string>
    <string name="title_countries">Find Countries</string>
    <string name="title_settings">Settings</string>
    <string name="sign_in">sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countrylist">CountryList</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="currency_details">Currency details:</string>
    <string name="favourite">Favourite</string>
    <string name="empty_list">The list of favourite countries is empty, you should add some countries from the main list!</string>
</resources>
