<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/countrylist"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintBottom_toTopOf="@+id/edt_username"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/welcome"
        />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edt_email"
        android:hint="@string/username"
        android:background="@drawable/edt_style"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:padding="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        android:hint="@string/email"
        android:background="@drawable/edt_style"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:padding="10dp"
        android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_auth"
        android:hint="@string/password"
        android:background="@drawable/edt_style"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:padding="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/btn_auth"
       app:layout_constraintBottom_toTopOf="@+id/tv_auth"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:text="SignUp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView

        android:id="@+id/tv_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingBottom="44dp"
        android:text="@string/login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

